Refactor ClusterPrivilege and ClusterPermission
- Makes ClusterPrivilege an interface with no relationship to
  Privilege
- Creates a hierarchy of different privilege types extending
  ClusterPrivilege
- Reimplements ClusterPermission as a single class with a supporting
  interface and Builder